# smithy

./: .gitignore  README.md  pyproject.toml  requirements.txt
assemblies/: moclo.py  overlap_extension.py
primers/: analysis.py
src/smithy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/smithy/assemblies/: assembler.py  goldengate.py  traditional_re.py
src/smithy/query/: blaster.py
